k3s/apps/storage/samba.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: storage
  labels:
    app: samba
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: samba
  template:
    metadata:
      labels:
        app: samba
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: samba
          image: dperson/samba:latest
          ports:
            - containerPort: 445
              protocol: TCP
            - containerPort: 139
              protocol: TCP
          volumeMounts:
            - name: shared
              mountPath: /shared
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: samba-shared
